src/test/deca/codegen/invalid/objet/debordementPile/PilePleinDeclMeth.deca
// Description : pile pleine avec des declaration de variable dans les méthodes
// Resultat : erreur lors de ima -p avec une pile petite


class A{
    
    int get1(){
        int a1 = 1;
        int a2 = 1;
        int a3 = 1;
        int a4 = 1;
        int a5 = 1;
        int a6 = 1;
        int a7 = 1;
        int a8 = 1;
        int a9 = 1;
        return a9;
    }
}
{
   A a = new A();
   a.get1();
}